Change Query to Postgres from MySQL schema in PriceAlertRepository
Change getPrices(Set<String> filteredSymbols) in Binance API